--- a/docker/Dockerfile_deb11_pyjeo_public
+++ b/docker/Dockerfile_deb11_pyjeo_public
@@ -124,7 +124,7 @@ RUN apt-get update \
     fftw3 \
     libshp2 \
     gdal-bin \
-    libpython3.9 \
+    # libpython3.9 \
     python3 \
     python3-gdal \
     python3-numpy \
@@ -135,6 +135,8 @@ RUN apt-get update \
     gzip \
     tar \
   && rm -rf /var/lib/apt/lists/*
+
+RUN python3 -c 'import sys; print(str(sys.version_info[0]) + "." + str(sys.version_info[1]))'
 
 RUN \
   mkdir -p /usr/local/lib/python3.9/dist-packages/jiplib
