--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,4 +37,4 @@ jobs:
         run: docker build -f docker/Dockerfile_deb11_pyjeo_public . -t docker-pyjeo:1.0
       - name: Run the test suite
         run: |
-          docker run --rm -v ${GITHUB_WORKSPACE}/tests:/tests:ro --cpus=2 -m 20g docker-pyjeo:1.0 python -W ignore -m unittest -v tests
+          docker run --rm -v ${GITHUB_WORKSPACE}/tests:/tests:ro --cpus=2 -m 20g docker-pyjeo:1.0 python3 -W ignore -m unittest -v tests
