--- a/docker/Dockerfile_deb11_pyjeo_public
+++ b/docker/Dockerfile_deb11_pyjeo_public
@@ -108,9 +108,9 @@ RUN cd $INSTALL_HOME \
     && rm -rf $INSTALL_HOME/jeolib-pyjeo*
     #&& rm pyjeo.tar.gz
 
-# RUN apt-get update \
-#   && apt-get upgrade -y \
-#   && DEBIAN_FRONTEND=noninteractive  apt-get install -y  --no-install-recommends \
+RUN apt-get update \
+  && apt-get upgrade -y \
+  && DEBIAN_FRONTEND=noninteractive  apt-get install -y  --no-install-recommends \
 #     apt-utils \
 #     python3-setuptools \
 #     libboost-serialization1.74.0 \
@@ -122,7 +122,7 @@ RUN cd $INSTALL_HOME \
 #     gdal-bin \
 #     libpython3.9 \
 #     python3 \
-#     python3-gdal \
+    python3-gdal \
 #     python3-numpy \
 #     python3-wheel \
 #     python3-xarray \
@@ -130,7 +130,7 @@ RUN cd $INSTALL_HOME \
 #     python3-pyproj \
 #     gzip \
 #     tar \
-#   && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/*
 # 
 # FROM registry.hub.docker.com/library/debian:10 as pyjeo
 # 
